Fix Scalable
Calendar us proper scaling unit and position and no more space will be added when event form shows up (black outline also properly cover the calendar)

--- a/calendar.css
+++ b/calendar.css
@@ -8,10 +8,10 @@
 }
 
 .month-container{
+    position: inherit;
     display: grid;
     grid-template-columns: 10% 80% 10%;
     height: 15.3%;
-    width: 99.5%;
     color: rgb(0, 0, 0);
     border-bottom: solid 4px black;
     border-left:solid 4px black;
@@ -47,7 +47,9 @@
     transform: rotate(135deg);
     -webkit-transform: rotate(135deg);
 }
-
+.calendar-container-inside{
+    height: 84.2%
+}
 .arrow:active {
     border: solid white;
     border-width: 0 7px 7px 0;
@@ -58,11 +60,10 @@
     display: grid;
     grid-template-columns: 14.28%  14.28%  14.28%  14.28%  14.28%  14.28%  14.28%;
     height: 5.6%;
-    width: 99.5%;
     background-color: rgb(182, 0, 0);
     font-family:'Times New Roman', Times, serif;
     font-weight: bold;
-    font-size: 1.7em;
+    font-size: 1.5vw;
     border-bottom: solid 4px rgb(0, 0, 0);
     border-left:solid 4px black;
     text-align: center;
@@ -72,72 +73,80 @@
 .date-container{
     display: grid;
     grid-template-columns: 14.28%  14.28%  14.28%  14.28%  14.28%  14.28%  14.28%;
-    height: 77.1%;
-    width: 100%;
+    height: 92.6%;
 }
 
 .date{
+    position:relative;
     background-color:wheat;
     border-left:solid 4px black;
     border-bottom:solid 4px black;
     padding-top: 2.8%;
     padding-left: 2%;
     font-family:'Times New Roman', Times, serif;
-    font-size: 20px;
+    font-size: 1vw;
 }
 
 .event-container{
+    position: absolute;
     padding-top: 10%;
     padding-left: 5%;
     height: 50%;
     width: 90%;
 }
 .user-event{
+    position: absolute;
     display: block;
     border: 2px solid black;
     height: 30%;
-    width: 100%;
+    width: 90%;
     resize: none;
     overflow: auto;
 }
 .user-time{
+    position: absolute;
+    top: 50%;
     display: block;
     border-bottom: 2px solid black;
     border-left: 2px solid black;
     border-right: 2px solid black;
     height: 30%;
-    width: 100%;
+    width: 90%;
     resize: none;
     overflow: auto;
 }
 .user-confirmation{
+    position: absolute;
+    top: 83%;
     margin-top: 2px;
     display: inline;
-    width: 55%;
-    height: 20%;
+    width: 48%;
+    height: 28%;
 }
 .event{
+    position: absolute;
     padding-top: 6px;
     padding-right: 3px;
-    font-size: 16px;
+    font-size: 0.9vw;
     font-family:'Times New Roman', Times, serif;
     text-align: center;
-    height: auto;
-    width: 100px;
+    height: 20%;
+    width: 100%;
 }
 .time{
+    position: absolute;
+    top: 70%;
     color:rgb(214, 51, 51);
     margin-bottom: 6px;
-    font-size: 16px;
+    font-size: 0.9vw;
     font-family:'Times New Roman', Times, serif;
     font-weight: bold;
     text-align: center;
-    height: 50px;
-    width: 100px;
+    height: auto;
+    width: 100%;
 }
 .date:hover{
     background-color: rgb(81, 189, 240);
 }
 
 /* https://www.youtube.com/watch?v=TdqQqyc7pfU */
- 
